# Changelog
# $Id$
nn-nn-13 - Version 5.1.27

  - Removed ant-contrib.jar from C/J distribution.

  - Added tests for GIS precise spatial operations introduced in 5.6GA.

  - Fixed META-INF information

  - Fix for Bug#17251955, ARRAYINDEXOUTOFBOUNDSEXCEPTION ON LONG MULTI-BYTE DB/USER NAMES

  - Fix for Bug#50538, DatabaseMetaData.getDriverVersion() contains unexpanded ${bzr.revision-id}

08-05-13 - Version 5.1.26

  - Fix for Bug#69298 (16845965), Methods DatabaseMetaData.getProcedures() and DatabaseMetaData.getProcedureColumns(), in JDBC4,
    return stored procedure only or both stored procedures and functions metadata information, depending on the value set in the
    connection property "getProceduresReturnsFunctions", having default value 'true'. Several fixes in Functions and
    Procedures metadata so that consulting I__S and MySQL/DDL returns the same info.

  - Fix for Bug#69308 (16879267), Avoid calling batchedStatement.close() twice, and thus raising and ignoring an undercover SQLException, in methods
    PreparedStatement.executeBatchedInserts and PreparedStatement.executePreparedBatchAsMultiStatement.

  - Fix for Bug#68400, useCompression=true and connect to server, zip native method cause out of memory.
    CompressedInputStream now does not keep reference to connection.
    Thank Dominic Tootell for his investigation, proposed solution and all the help he provided.

  - Fix for Bug#65871, DatabaseMetaData.getColumns() throws an MySQLSyntaxErrorException.
    Delimited names of databases and tables are handled correctly now. The edge case is ANSI quoted
    identifiers with leading and trailing "`" symbols, for example CREATE DATABASE "`dbname`". Methods
    like DatabaseMetaData.getColumns() allow parameters passed both in unquoted and quoted form,
    quoted form is not JDBC-compliant but used by third party tools. So when you pass the indentifier
    "`dbname`" in unquoted form (`dbname`) driver handles it as quoted by "`" symbol. To handle such